# ML

./: .gitignore  README.md  pyproject.toml
Linear_Regression/: LR_on_boston.ipynb  LR_on_dataset.ipynb  LR_on_salary.ipynb  Linear_Regression_From_Scartch.ipynb  Linear_Regression_code.py
Logistic_Regression/: IRIS_Classification.ipynb  Loan_Approval_Logistic_Regression_Clean.ipynb  Logistic_Regression.py  Logistic_Regression_From_Scratch.ipynb  Logistic_Regression_on_load_approval.ipynb  Logistic_Regression_on_loan_approval.ipynb  Softmax.ipynb
