[project]
name = "ml-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.2.5",
    "ollama>=0.5.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.0",
]
